--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -159,7 +159,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Introduction To Programming In C.jpg" class="card-img-top" alt="...">
+            <img src="./images/Introduction To Programming In C.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">NPTEL Introduction to Programming in C</h5>
               <p class="card-text">Passed out with 70% pass Percentage in 2022</p>
@@ -170,7 +170,7 @@
 
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Software Testing.jpg" class="card-img-top" alt="...">
+            <img src="./images/Software Testing.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">NPTEL Software Testing</h5>
               <p class="card-text">Passed out with 67% pass Percentage in 2023</p>
@@ -181,7 +181,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/images/Blockchain and its Applications.jpg" class="card-img-top" alt="...">
+            <img src="./images/Blockchain and its Applications.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">NPTEL Blockchain and Its Applications</h5>
               <p class="card-text" >Passed out with 67% pass Percentage in 2023</p>
@@ -192,7 +192,7 @@
 
         <div class="col-md-6" >
           <div class="card mb-3">
-            <img src="/images/Cybersecurity Essentials.jpg" class="card-img-top" alt="...">
+            <img src="./images/Cybersecurity Essentials.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cybersecurity Essentials course</h5>
               <p class="card-text">Cybersecurity Essentials course completed in 2023</p>
